# bevy_xpbd_test

./: Cargo.toml  README.md
assets/: ammo.glb  rock.glb
src/: main.rs
