[package]
name = "bevy_xpbd_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy-inspector-egui = "0.24.0"
bevy_xpbd_3d = "0.4"
bevy_asset_loader = { version = "0.20", features = ["3d"] }
bevy-scene-hook = "10"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
